[gd_scene load_steps=9 format=3 uid="uid://cojneeyfou7cr"]

[ext_resource type="PackedScene" uid="uid://5ln32fnvrhnl" path="res://src/Game/Enemies/Enemy.tscn" id="1_iya1w"]
[ext_resource type="Script" path="res://src/Game/Enemies/Bat/bat.gd" id="2_o1y7h"]
[ext_resource type="Texture2D" uid="uid://0rbe5pgffr5y" path="res://assets/images/Enemies/Bat/bat_hang.png" id="3_h4c83"]
[ext_resource type="Texture2D" uid="uid://co022x748xfrf" path="res://assets/images/Enemies/Bat/bat_dead.png" id="3_rnl84"]
[ext_resource type="Texture2D" uid="uid://bjdt4jo7nps0q" path="res://assets/images/Enemies/Bat/bat.png" id="4_deo78"]
[ext_resource type="Texture2D" uid="uid://ci58e27ohkraf" path="res://assets/images/Enemies/Bat/bat_fly.png" id="5_usjwc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r8lk6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rnl84")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_deo78")
}, {
"duration": 1.0,
"texture": ExtResource("5_usjwc")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_h4c83")
}],
"loop": true,
"name": &"hang",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmw28"]
size = Vector2(149.333, 192)

[node name="Bat" instance=ExtResource("1_iya1w")]
scale = Vector2(0.75, 0.75)
script = ExtResource("2_o1y7h")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_r8lk6")
animation = &"hang"

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_tmw28")

[node name="TopPos" parent="." index="2"]
position = Vector2(0, -85.3333)

[node name="PlayerRay" parent="." index="5"]
rotation = 3.92699
target_position = Vector2(0, -2400)

[node name="PlayerRay2" type="RayCast2D" parent="." index="6"]
rotation = -3.92699
target_position = Vector2(0, -2400)
collision_mask = 2
hit_from_inside = true

[connection signal="player_tracked" from="." to="." method="_on_player_tracked"]
